--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
-<title></title>
+<link rel= "stylesheet" type = "text/css" href="/stylesheet.css"/>
+<title>Gif Search Engine</title>
+<img id="logo" src="/gift.png"/>
 <main></main>
 <script src="/bundle.js"></script>
