--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
 <link rel= "stylesheet" type = "text/css" href="/stylesheet.css"/>
+<link href="https://cdn.jsdelivr.net/npm/react-big-calendar@0.19.0/lib/css/react-big-calendar.css" rel="stylesheet"/>
 <main></main>
 <script src="/bundle.js"></script>
